fixed-Internal server error at key parts of house,view all reports and substep report detail from Project Manager

--- a/survey/core/templates/core/recent_updates.html
+++ b/survey/core/templates/core/recent_updates.html
@@ -43,7 +43,7 @@
                     <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
                     <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">{{ project }}</a></li>
                 {% else %}
-                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project %}">Dashboard</a>
+                    <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
                     </li>
                 {% endif %}
                     <li class="breadcrumb-item active" aria-current="page">Recent Updates</li>
