--- a/survey/core/templates/core/construction_substeps_detail.html
+++ b/survey/core/templates/core/construction_substeps_detail.html
@@ -14,8 +14,8 @@
                         href="{% url 'core:project_dashboard' object.project.pk %}">{{ object.project }}
                     Dashboard</a></li>
                 {% else %}
-                <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a>
-                </li>
+                <li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' object.project.pk %}">Project Dashboard</a></li>
+
                 {% endif %}
             </ol>
         </nav>
