--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -294,7 +294,7 @@
                                     <a href="{% url 'userrole:send_invitation' project.pk %}"><i
                                             class="la la-user-plus"></i>Invite New User</a>
                                     <a href="{% url 'userrole:userrole_create' project.pk %}"><i
-                                            class="la la-user"></i>Add Manager</a>
+                                            class="la la-user"></i>Assign Project Manager</a>
                             </div>
                             <div class="widget-body">
                                 <ul class="user-list-sm">
