--- a/survey/core/templates/core/project_dashboard.html
+++ b/survey/core/templates/core/project_dashboard.html
@@ -99,7 +99,7 @@
                                         </a>
                                     </div>
                                     <div class="col-md-6">
-                                        <a href="{% url 'core:community_users' project.pk %}" title="" class="stat-item margin-top">
+                                        <a href="{% url 'core:community_member' project.pk %}" title="" class="stat-item margin-top">
                                             <span class="stat-count">{{ project.total_common_users }}</span>
                                             <span class="stat-label">Community Users</span>
                                             <i class="la la-users"></i>
