--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -256,7 +256,7 @@
                     <div class="widget-info margin-top-large">
                         <div class="widget-head">
                             <h4><a href="" title="">Pictures</a></h4>
-                            <a href="{% url 'core:picture_list' %}" title="" class="btn btn-sm btn-xs btn-primary"><i
+                            <a href="{% url 'core:site_picture_list' object.id %}" title="" class="btn btn-sm btn-xs btn-primary"><i
                                     class="la la-caret-right"></i> View All</a>
                         </div>
                         <div class="widget-body no-padding-top" data-mh="sd-widget">
