--- a/survey/core/templates/core/picture_list.html
+++ b/survey/core/templates/core/picture_list.html
@@ -13,6 +13,9 @@
                 <li class="breadcrumb-item"><a href="{% url 'core:admin_dashboard' %}">Dashboard</a></li>
                 {% else %}<li class="breadcrumb-item"><a href="{% url 'core:project_dashboard' project.pk %}">Dashboard</a></li>
                 {% endif %}
+                <li class="breadcrumb-item"><a href="{% url 'core:site_detail' site.pk %}">{{site}}</a></li>
+                <li class="breadcrumb-item active">Pictures</li>
+
             </ol>
         </nav>
     </div>
