report detail image and verify user issue fixed

--- a/survey/core/templates/core/picture_list.html
+++ b/survey/core/templates/core/picture_list.html
@@ -34,7 +34,7 @@
                                         {% for img in images %}
                                                 <div class="col-md-4">
                                                     <div class="photo-holder photo-item margin-top photo-item">
-                                                        <img src="{{img.image.url}}" img-title="Hello" alt="">
+                                                        <img src="{{img.image.url}}" alt="">
                                                     </div>
                                                 </div>
                                         {% empty %}
