--- a/survey/core/templates/core/site_detail.html
+++ b/survey/core/templates/core/site_detail.html
@@ -265,7 +265,7 @@
 
                                 <div class="col-md-4">
                                     <div class="photo-holder photo-item margin-top">
-                                        <img src="{{picture.image.url}}" img-title="Hello" alt="">
+                                        <img src="{{picture.image.url}}" alt="">
 
                                     </div>
 
