--- a/survey/core/templates/core/substepreport_detail.html
+++ b/survey/core/templates/core/substepreport_detail.html
@@ -156,6 +156,8 @@
 
                                 {% endfor %}
 
+                            {% else %}
+                                    <p>No Pictures found.</p>
 
                             {% endif %}
                         </div>
